<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation for mobile robot</description>
  <maintainer email="100lakshyaagarwal@gmail.com">huh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <!-- <depend>gazebo_ros_pkgs</depend> -->
  
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>mobile_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
